trunk/Archive2/84/f7f02db7468b4f/output
main.cpp: In function 'void addMapping(const K&, const V&, std::map<K, V>&)':
main.cpp:11:45: error: type/value mismatch at argument 1 in template parameter list for 'template<class _T1, class _T2> struct std::pair'
     std::pair<std::map<K, V>::iterator, bool> ret;
                                             ^
main.cpp:11:45: error:   expected a type, got 'std::map<K, V>::iterator'
main.cpp:11:50: error: invalid type in declaration before ';' token
     std::pair<std::map<K, V>::iterator, bool> ret;
                                                  ^
